kubernetes/ntfy/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  revisionHistoryLimit: 1
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ntfy
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ntfy
    spec:
      # initContainers:
      #   - name: ntfy-create-users
      #     image: binwiederhier/ntfy:v1.28.0 # set deployed version
      #     args: ["user add --role=admin sbordeyne"]
      #     resources:
      #       limits:
      #         memory: 300Mi
      #         cpu:  200m
      #       requests:
      #             cpu: 150m
      #             memory: 150Mi
      #     volumeMounts:
      #         - mountPath: /etc/ntfy/server.yml
      #           subPath: server.yml
      #           name: ntfy
      #         - mountPath: /var/cache/ntfy
      #           name: cache
      #         - mountPath: /var/lib/ntfy
      #           name: ntfy
      containers:
      - name: ntfy
        image: binwiederhier/ntfy:v1.28.0 # set deployed version
        args: ["serve"]
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        resources:
          limits:
            memory: 300Mi
            cpu: 200m
          requests:
            cpu: 150m
            memory: 150Mi
        volumeMounts:
        - mountPath: /etc/ntfy/server.yml
          subPath: server.yml
          name: config
        - mountPath: /var/cache/ntfy
          name: cache
        - mountPath: /var/lib/ntfy
          name: ntfy
      volumes:
      - name: config
        configMap:
          name: ntfy-config
      - name: cache
        persistentVolumeClaim:
          claimName: ntfy-cache
      - name: ntfy
        persistentVolumeClaim:
          claimName: ntfy
