kubernetes/ntfy/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: ntfy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
