kubernetes/ntfy/manifests/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntfy
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ntfy.slfhst.io
    external-dns.alpha.kubernetes.io/target: slfhst.io
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  tls:
  - hosts:
    - ntfy.slfhst.io
    secretName: ntfy-cert-prod
  rules:
  - host: ntfy.slfhst.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ntfy
            port:
              name: http
